# hip-cargo

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  cliff.toml  pyproject.toml  tbump.toml
.devcontainer/: README.md  devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  publish-container.yml  publish.yml  update-cabs-and-publish.yml  update-cabs.yml
scripts/: generate_cabs.py  update_cli_help.py  update_readme.py
src/hip_cargo/: __init__.py  _container_image.py  cab_to_function.py  callbacks.py  cli.py  decorators.py  introspector.py  yaml_generator.py
src/hip_cargo/cabs/: __init__.py  generate_cab.yaml  generate_cabs.yml  generate_function.yaml  generate_function.yml  generate_schemas.yml  init.yml
src/hip_cargo/cli/: __init__.py  generate_cab.py  generate_cabs.py  generate_function.py  generate_schemas.py  init.py  monitor.py
src/hip_cargo/core/: __init__.py  generate_cab.py  generate_cabs.py  generate_function.py  generate_schemas.py  init.py
src/hip_cargo/monitoring/: __init__.py  cab_resolver.py  config.py  discovery.py  dispatcher.py  ray_backend.py  recipe_discovery.py  recipe_parser.py  server.py
src/hip_cargo/recipes/: __init__.py  gen_cabs.yml
src/hip_cargo/templates/: Dockerfile  __init__.py  cli_multi.py  cli_single.py  cliff.toml  dependabot.yml  generate_cabs.py  onboard_cli.py  onboard_core.py  pre-commit-config.yaml  pyproject.toml  tbump.toml
src/hip_cargo/templates/devcontainer/: devcontainer.json
src/hip_cargo/templates/licenses/: apache-2.0.txt  bsd-3-clause.txt  mit.txt
src/hip_cargo/templates/workflows/: ci.yml  publish-container.yml  update-cabs.yml
src/hip_cargo/utils/: __init__.py  cab_to_function.py  callbacks.py  config.py  decorators.py  introspector.py  metadata.py  progress.py  progress_context.py  runner.py  signature_utils.py  spec.py  types.py  yaml_comments.py  yaml_generator.py
tests/: conftest.py  mocks.py  test_cab_resolver.py  test_cli.py  test_comment_preservation.py  test_comments_in_decorators_and_params.py  test_config.py  test_container_fallback_integration.py  test_container_tag_regex.py  test_decorators.py  test_discovery.py  test_dispatcher.py  test_end_to_end_comment_preservation.py  test_generate_function_body.py  test_generate_schemas.py  test_init.py  test_integration.py  test_introspector.py  test_list_types.py  test_pfb_imaging_roundtrip.py  test_progress.py  test_ray_backend.py  test_recipe_parser.py  test_remote_uri_runner.py  test_round_trip.py  test_roundtrip.py  test_roundtrip_comments.py  test_runner.py  test_server.py  test_stimela_meta_class.py  test_stimela_metadata.py  test_tunable_roundtrip.py  test_upath_parser.py  test_yaml_generator.py
tests/example_package/: processor.py  processor_annotated.py
tests/example_package/cabs/: processor.yaml  processor_annotated.yaml
tests/fixtures/src/fixture_pkg/cli/: tunable_demo.py
