[project]
name = "<PROJECT_NAME>"
version = "<INITIAL_VERSION>"
description = "<DESCRIPTION>"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "<LICENSE_TYPE>" }
authors = [
    { name = "<AUTHOR_NAME>", email = "<AUTHOR_EMAIL>" }
]
classifiers = [
    "<LICENSE_CLASSIFIER>",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "hip-cargo>=0.1.3",
]

[project.urls]
Homepage = "<GITHUB_URL>"
Repository = "<GITHUB_URL>"
"Bug Tracker" = "<GITHUB_URL>/issues"

[project.scripts]
<CLI_COMMAND> = "<PACKAGE_NAME>.cli:app"

[build-system]
# NOTE: This uv_build constraint is intentionally aligned with hip-cargo's own pyproject.toml.
# If you bump uv_build in hip-cargo, update this template constraint to match.
requires = ["uv_build>=0.8.3,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Tests that take more time to run",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
    "tbump>=6.11.0",
    "pre-commit>=4.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
